syntax = "proto3";

import "google/protobuf/empty.proto";
package ru.tinkoff.vogorode.rancher;

option java_package = "ru.tinkoff.vogorode.rancher";
option java_multiple_files = true;

service RancherService {
  rpc getVersion(google.protobuf.Empty) returns (VersionResponse);
  rpc getReadiness(google.protobuf.Empty) returns (ReadinessResponse);
}

message VersionResponse {
  string artifact = 1;
  string name = 2;
  string group = 3;
  string version = 4;
}

message ReadinessResponse {
  string status = 1;
}